--- a/index.html
+++ b/index.html
@@ -6,85 +6,156 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://github.githubassets.com/favicons/favicon.png" />
   <style>
+    /* ========== Animations ========== */
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-30px);}
+      to   { opacity: 1; transform: translateY(0);}
+    }
+    @keyframes fadeIn {
+      from { opacity: 0;}
+      to   { opacity: 1;}
+    }
+    @keyframes gradientBG {
+      0% {background-position:0% 50%;}
+      50% {background-position:100% 50%;}
+      100% {background-position:0% 50%;}
+    }
+    @keyframes scaleIn {
+      from { transform: scale(0.95); opacity: 0.5;}
+      to   { transform: scale(1); opacity: 1;}
+    }
+    @keyframes tabHighlight {
+      0% {background-color: #4299e1;}
+      50% {background-color: #62b6f7;}
+      100% {background-color: #4299e1;}
+    }
+    /* ========== Layout & Basic ========== */
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       margin: 0;
-      background: #f8f8f8;
+      background: linear-gradient(120deg, #e6e9f0 0%, #eef4fd 100%);
+      min-height: 100vh;
       color: #23272f;
+      animation: fadeIn 1.2s;
     }
     nav {
-      background: #1a1e23;
+      background: linear-gradient(90deg, #3b69b6 0%, #4299e1 70%, #4173b6 100%);
       padding: 0.7em 0.5em;
       text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      box-shadow: 0 4px 16px rgba(80,100,180,0.09);
+      animation: slideDown 0.7s;
     }
     nav span {
       color: #e3eafc;
-      font-size: 1.08em;
+      font-size: 1.12em;
       letter-spacing: 0.05em;
       margin: 0 1.2em;
-      font-weight: 500;
+      font-weight: 600;
+      filter: drop-shadow(0 1px 1px #255e96aa);
     }
     nav a {
       color: #e3eafc;
       text-decoration: none;
       margin: 0 1.2em;
       font-size: 1.08em;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.04em;
       padding-bottom: 0.1em;
       border-bottom: 2px solid transparent;
       transition: color 0.2s, border-bottom 0.2s;
+      position: relative;
+      z-index: 2;
     }
     nav a:hover {
-      color: #4299e1;
-      border-bottom: 2px solid #4299e1;
+      color: #fff;
+      border-bottom: 2px solid #fff;
     }
     header {
-      background: #262b32;
+      background: linear-gradient(120deg, #4299e1 0%, #2562a4 100%);
       color: #fff;
-      padding: 2em 0 1em 0;
+      padding: 2.3em 0 1.5em 0;
       text-align: center;
       margin-bottom: 2em;
-      box-shadow: 0 2px 11px rgba(0,0,0,0.13);
+      box-shadow: 0 2px 25px rgba(66,153,225,0.24);
+      border-bottom-left-radius: 40px 30px;
+      border-bottom-right-radius: 40px 30px;
+      animation: slideDown 1.1s;
+      position: relative;
+      overflow: hidden;
+    }
+    header::after {
+      content: "";
+      position: absolute;
+      top: -40px; left: 50%; transform: translateX(-50%);
+      width: 160vw; height: 120px;
+      background: radial-gradient(circle at 50% 55%, #f3f8ff33 0%, transparent 80%);
+      z-index: 1;
+      pointer-events: none;
     }
     header h1 {
       margin-top: 0;
-      font-size: 2.1em;
+      font-size: 2.2em;
       letter-spacing: 0.03em;
+      font-weight: 800;
+      text-shadow: 0 2px 18px #2562a444;
+      position: relative; z-index: 2;
+      animation: scaleIn 0.9s;
+    }
+    header p {
+      font-size: 1.12em;
+      margin-bottom: 1.5em;
+      opacity: 0.91;
+      z-index: 2;
+      position: relative;
     }
     .github-btns {
       margin: 1.3rem 0 0.7rem 0;
       text-align: center;
+      z-index: 2;
+      position: relative;
     }
     .github-btns a {
       display: inline-block;
       margin: 0 0.6rem;
       padding: 0.5rem 1.2rem;
-      background: #24292e;
+      background: linear-gradient(90deg, #23272f 60%, #3b69b6 100%);
       color: #fff;
-      border-radius: 5px;
+      border-radius: 7px;
       text-decoration: none;
-      font-size: 1rem;
-      transition: background 0.2s;
+      font-size: 1.07rem;
+      font-weight: 500;
+      transition: background 0.28s, transform 0.18s;
+      box-shadow: 0 2px 8px #255e9630;
+      border: none;
+      outline: none;
     }
     .github-btns a:hover {
-      background: #444950;
+      background: #255e96;
+      transform: translateY(-2px) scale(1.04);
     }
     main {
-      max-width: 850px;
-      margin: 1.5em auto;
+      max-width: 900px;
+      margin: 1.5em auto 0 auto;
       background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.08);
+      border-radius: 18px;
+      box-shadow: 0 8px 40px rgba(0,0,0,0.10);
       padding: 2em 2.5em 1.5em 2.5em;
+      animation: fadeIn 2s;
+      position: relative;
+      z-index: 2;
     }
     section {
       margin-bottom: 2.2em;
+      animation: fadeIn 1.2s;
     }
     h2 {
       margin-top: 1.5em;
       margin-bottom: 0.7em;
       color: #3b69b6;
-      font-weight: 500;
+      font-weight: 600;
+      letter-spacing: 0.02em;
     }
     ul, ol {
       margin-left: 1.7em;
@@ -92,127 +163,160 @@
     code, pre {
       background: #f3f3f3;
       color: #396;
-      padding: 2px 6px;
+      padding: 2px 7px;
       border-radius: 4px;
       font-family: 'Fira Mono', 'Consolas', monospace;
     }
     .button {
       display: inline-block;
-      background: #4299e1;
+      background: linear-gradient(95deg, #4299e1 80%, #62b6f7 100%);
       color: #fff !important;
-      padding: 0.6em 1.5em;
-      border-radius: 5px;
+      padding: 0.67em 1.7em;
+      border-radius: 6px;
       margin: 0.8em 0 0.8em 0;
       text-decoration: none;
-      font-size: 1.04em;
-      transition: background 0.2s;
+      font-size: 1.08em;
+      transition: background 0.22s, transform 0.17s;
       border: none;
+      font-weight: 500;
+      box-shadow: 0 2px 13px #4299e13c;
       cursor: pointer;
     }
     .button:hover {
       background: #255e96;
+      transform: translateY(-2px) scale(1.04);
     }
+    /* ========== Tab System ========== */
+    .tab-container {
+      margin: 2em 0 1.5em 0;
+      display: flex;
+      gap: 0.5em;
+      flex-wrap: wrap;
+      justify-content: left;
+      animation: fadeIn 1.6s;
+    }
+    .tab-btn {
+      background: #e2e8f0;
+      color: #285185;
+      border: none;
+      border-radius: 9px 9px 0 0;
+      padding: 0.8em 2em;
+      font-size: 1.07em;
+      cursor: pointer;
+      font-weight: 500;
+      box-shadow: 0 1px 6px #2562a41a;
+      transition: background 0.15s, color 0.15s, transform 0.17s;
+    }
+    .tab-btn.active {
+      background: linear-gradient(90deg, #4299e1 70%, #3b69b6 100%);
+      color: #fff;
+      animation: tabHighlight 1.6s infinite;
+      transform: scale(1.06) translateY(-2px);
+      box-shadow: 0 3px 12px #4299e12a;
+    }
+    .tab-panel {
+      display: none;
+      margin-bottom: 2em;
+      animation: fadeIn 1.2s;
+    }
+    .tab-panel.active {
+      display: block;
+      animation: scaleIn 0.5s;
+    }
+    /* ========== FAQ Collapsible ========== */
     .faq .faq-question {
       width: 100%;
       background: #e2e8f0;
       border: none;
       outline: none;
       text-align: left;
-      padding: 0.8em 1em;
-      font-size: 1.05em;
+      padding: 0.8em 1.2em;
+      font-size: 1.09em;
       color: #285185;
       margin-top: 0.7em;
-      border-radius: 5px;
+      border-radius: 7px;
       cursor: pointer;
-      transition: background 0.1s;
-      display: block;
+      font-weight: 600;
+      box-shadow: 0 2px 8px #b4c8de33;
+      transition: background 0.13s, box-shadow 0.13s;
+      position: relative;
+      z-index: 1;
     }
     .faq .faq-question.active {
-      background: #c5e4fa;
+      background: linear-gradient(90deg,#c5e4fa 70%, #e2e8f0 100%);
+      box-shadow: 0 4px 16px #4299e122;
     }
     .faq .faq-answer {
       display: none;
       background: #f8fafc;
       border-left: 3px solid #4299e1;
       margin: 0 0 0.7em 0;
-      padding: 0.8em 1em;
-      border-radius: 0 7px 7px 7px;
+      padding: 0.8em 1.2em;
+      border-radius: 0 10px 10px 10px;
+      box-shadow: 0 1px 5px #4299e125;
+      font-size: 1.03em;
+      animation: fadeIn 0.6s;
     }
+    /* ========== Playground/Demo ========== */
     .result {
       margin-top: 2em;
-      background: #e6fbe7;
+      background: linear-gradient(90deg,#e6fbe7 80%, #d2f5e3 100%);
       border: 1px solid #a2e1a8;
-      border-radius: 6px;
+      border-radius: 9px;
       padding: 1.2em 1.5em;
       color: #1a491a;
-      font-size: 1.1em;
+      font-size: 1.13em;
       display: none;
+      animation: fadeIn 0.7s;
+      box-shadow: 0 2px 13px #77e1a73a;
     }
     form input[type="text"], form textarea {
       width: 95%;
-      padding: 0.5em;
+      padding: 0.6em;
       border: 1px solid #b4c8de;
-      border-radius: 4px;
+      border-radius: 6px;
       margin-bottom: 1em;
-      font-size: 1em;
+      font-size: 1.06em;
+      transition: border 0.15s;
+      background: #f8fafd;
+      box-shadow: 0 1px 4px #b4c8de16;
+    }
+    form input[type="text"]:focus, form textarea:focus {
+      border: 1.5px solid #4299e1;
+      background: #f3f9fe;
     }
     form button[type="submit"] {
-      background: #4299e1;
+      background: linear-gradient(90deg,#4299e1 80%, #3b69b6 100%);
       color: #fff;
       border: none;
       padding: 0.7em 2em;
-      border-radius: 5px;
-      font-size: 1.07em;
+      border-radius: 6px;
+      font-size: 1.08em;
       cursor: pointer;
-      transition: background 0.15s;
+      font-weight: 600;
+      box-shadow: 0 2px 10px #4299e13a;
+      transition: background 0.15s, transform 0.13s;
     }
     form button[type="submit"]:hover {
       background: #255e96;
+      transform: scale(1.04);
     }
-    .tab-container {
-      margin: 2em 0 1.5em 0;
-      display: flex;
-      gap: 0.3em;
-      flex-wrap: wrap;
+    /* ========== Responsive ========== */
+    @media (max-width: 700px) {
+      main { padding: 1em 0.5em;}
+      header h1 { font-size: 1.33em;}
+      .tab-btn { font-size: 0.99em; padding: 0.7em 0.6em;}
     }
-    .tab-btn {
-      background: #e2e8f0;
-      color: #285185;
-      border: none;
-      border-radius: 5px 5px 0 0;
-      padding: 0.7em 1.7em;
-      font-size: 1em;
-      cursor: pointer;
-      transition: background 0.12s;
-    }
-    .tab-btn.active {
-      background: #4299e1;
-      color: #fff;
-    }
-    .tab-panel {
-      display: none;
-      margin-bottom: 2em;
-    }
-    .tab-panel.active {
-      display: block;
-      animation: fade-in 0.4s;
-    }
-    @keyframes fade-in {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    @media (max-width: 500px) {
+      nav span, nav a { font-size: 1em;}
     }
     footer {
       background: #23272f;
       color: #b0b7c6;
       text-align: center;
-      padding: 1.2em 0 1em 0;
+      padding: 1.3em 0 1em 0;
       margin-top: 2.5em;
       font-size: 1em;
-    }
-    @media (max-width: 600px) {
-      main { padding: 1em 0.4em; }
-      header h1 { font-size: 1.2em; }
-      .tab-btn { font-size: 0.95em; padding: 0.7em 0.7em;}
     }
   </style>
 </head>
@@ -242,16 +346,40 @@
     <section class="tab-panel active" id="tab-home">
       <h2>Welcome</h2>
       <p>
-        This bot automatically labels new issues in your GitHub repository using a local ML classifier.<br>
-        <button class="button" onclick="activateTab('demo')">Try the Demo</button>
+        <span style="display:inline-block;animation:fadeIn 2.1s cubic-bezier(.45,1.08,.62,1.05);">This bot automatically labels new issues in your GitHub repository using a local ML classifier.<br></span>
+        <button class="button" onclick="activateTab('demo')">✨ Try the Demo</button>
       </p>
       <h2>Features</h2>
       <ul>
-        <li>⚡ Fast & free, open source</li>
-        <li>🔒 No data leaves your server</li>
-        <li>🧠 Customizable with your own label rules</li>
-        <li>🐳 Easy Docker/Render deployment</li>
+        <li>⚡ <b>Fast & free</b>, open source</li>
+        <li>🔒 <b>Privacy-first:</b> No data leaves your server</li>
+        <li>🧠 <b>Customizable</b> with your own label rules</li>
+        <li>🐳 <b>Easy Docker/Render deployment</b></li>
       </ul>
+      <div style="display:flex;justify-content:center;margin-top:2em;">
+        <svg height="120" width="320" style="display:block;">
+          <defs>
+            <linearGradient id="grad1" x1="0%" y1="20%" x2="100%" y2="80%">
+              <stop offset="0%" style="stop-color:#4299e1;stop-opacity:1" />
+              <stop offset="100%" style="stop-color:#62b6f7;stop-opacity:1" />
+            </linearGradient>
+            <filter id="glow" width="300%" height="300%" x="-1" y="-1">
+              <feGaussianBlur stdDeviation="8" result="glow"/>
+              <feMerge>
+                <feMergeNode in="glow"/>
+                <feMergeNode in="SourceGraphic"/>
+              </feMerge>
+            </filter>
+          </defs>
+          <ellipse cx="160" cy="60" rx="130" ry="32" fill="url(#grad1)" filter="url(#glow)">
+            <animate attributeName="rx" values="130;110;130" keyTimes="0;0.5;1" dur="2.5s" repeatCount="indefinite"/>
+          </ellipse>
+          <text x="50%" y="62%" text-anchor="middle" fill="#fff" font-size="1.35em" font-family="Segoe UI, Arial" font-weight="800" style="letter-spacing:0.1em;">
+            GitHub Issue Labeller
+            <animate attributeName="opacity" values="1;0.9;1" keyTimes="0;0.5;1" dur="2.5s" repeatCount="indefinite"/>
+          </text>
+        </svg>
+      </div>
     </section>
 
     <!-- Docs Tab -->
@@ -284,9 +412,9 @@
 
     <!-- Demo Tab -->
     <section class="tab-panel" id="tab-demo">
-      <h2>Try the Labeller Demo</h2>
+      <h2><span style="display:inline-block;animation:slideDown 1s;">Try the Labeller Demo</span></h2>
       <p>See how the classifier would label your issue!</p>
-      <form id="demo-form">
+      <form id="demo-form" style="animation:scaleIn 0.9s;">
         <label for="title">Issue Title:</label>
         <input type="text" id="title" placeholder="e.g. Crash on login" required><br>
         <label for="body">Description:</label>
@@ -294,6 +422,17 @@
         <button type="submit">Suggest Labels</button>
       </form>
       <div id="result" class="result"></div>
+      <div style="margin-top:2em;display:flex;justify-content:center;">
+        <svg width="220" height="36">
+          <rect width="220" height="36" rx="11" fill="#e2e8f0">
+            <animate attributeName="fill" values="#e2e8f0;#d2f5e3;#e2e8f0" keyTimes="0;0.5;1" dur="2.5s" repeatCount="indefinite"/>
+          </rect>
+          <text x="50%" y="65%" text-anchor="middle" fill="#285185" font-size="1.01em" font-family="Segoe UI, Arial" font-weight="600">
+            Playground: Try any issue!
+            <animate attributeName="opacity" values="1;0.75;1" keyTimes="0;0.5;1" dur="2.5s" repeatCount="indefinite"/>
+          </text>
+        </svg>
+      </div>
     </section>
 
     <!-- FAQ Tab -->
@@ -309,13 +448,24 @@
         <button class="faq-question">How do I improve label accuracy?</button>
         <div class="faq-answer"><p>Add more labeled examples to the <code>test-data/issues.json</code> file in your project.</p></div>
       </div>
+      <div style="margin-top:2.5em;display:flex;justify-content:center;">
+        <svg width="180" height="38">
+          <ellipse cx="90" cy="19" rx="77" ry="16" fill="#e2e8f0">
+            <animate attributeName="fill" values="#e2e8f0;#c5e4fa;#e2e8f0" keyTimes="0;0.5;1" dur="2.6s" repeatCount="indefinite"/>
+          </ellipse>
+          <text x="50%" y="60%" text-anchor="middle" fill="#285185" font-size="1.03em" font-family="Segoe UI, Arial" font-weight="600">
+            Ask more on GitHub!
+            <animate attributeName="opacity" values="1;0.75;1" keyTimes="0;0.5;1" dur="2.6s" repeatCount="indefinite"/>
+          </text>
+        </svg>
+      </div>
     </section>
   </main>
   <footer>
     &copy; 2025 <a href="https://github.com/AbhyanandSharma2005">Abhyanand Sharma</a>
   </footer>
   <script>
-    // --- Tab system ---
+    // --- Tab system & animation ---
     function activateTab(tab) {
       document.querySelectorAll('.tab-btn').forEach(btn => {
         btn.classList.toggle('active', btn.dataset.tab === tab);
@@ -323,7 +473,7 @@
       document.querySelectorAll('.tab-panel').forEach(panel => {
         panel.classList.toggle('active', panel.id === 'tab-' + tab);
       });
-      window.scrollTo({top: 0});
+      window.scrollTo({top: 0, behavior: 'smooth'});
     }
     document.querySelectorAll('.tab-btn').forEach(btn => {
       btn.addEventListener('click', function() {
@@ -347,6 +497,7 @@
           if (!isActive) {
             btn.classList.add('active');
             answer.style.display = "block";
+            answer.style.animation = "fadeIn 0.5s";
           }
         });
       });
@@ -383,6 +534,7 @@
           const labels = suggestLabels(title, body);
           res.innerHTML = `<b>Suggested label(s):</b> <span>${labels.join(', ')}</span>`;
           res.style.display = 'block';
+          res.style.animation = "fadeIn 0.8s";
         });
       }
     });
